--- a/mobile/android/base/tests/robocop_boxes.html
+++ b/mobile/android/base/tests/robocop_boxes.html
@@ -9,6 +9,13 @@
 
 
 
+
+
+
+
+
+
+
 <html style="margin: 0; padding: 0">
 <head>
  <title>Browser Box test</title>
@@ -19,9 +26,12 @@
 for (var y = 0; y < 2000; y += 100) {
     document.write("<div style='width: 2000px; height: 100px; margin: 0; padding: 0; border: none'>\n");
     for (var x = 0; x < 2000; x += 100) {
-        var r = (y + x) % 255;
-        var g = 255 - (y / 10);
-        var b = 255 - (x / 10);
+        var r = (Math.floor(x / 3) % 256);
+        r = r & 0xF8;
+        var g = (x + y) % 256;
+        g = g & 0xFC;
+        var b = (Math.floor(y / 3) % 256);
+        b = b & 0xF8;
         document.write("<div style='float: left; width: 100px; height: 100px; margin: 0; padding: 0; border: none; background-color: rgb(" + r + "," + g + "," + b + ")'> </div>\n");
     }
     document.write("</div>\n");
