--- a/accessible/tests/mochitest/test_aria_roles.html
+++ b/accessible/tests/mochitest/test_aria_roles.html
@@ -68,6 +68,7 @@
 
       //////////////////////////////////////////////////////////////////////////
       // misc roles
+      testRole("note", ROLE_NOTE);
       testRole("scrollbar", ROLE_SCROLLBAR);
       testRole("dir", ROLE_LIST);
 
@@ -154,6 +155,7 @@
   <div role="sectionhead" id="sectionhead">sectionhead</div>
 
   
+  <div role="note" id="note">note</div>
   <div role="scrollbar" id="scrollbar">scrollbar</div>
 
   <div id="dir" role="directory">
