--- a/browser/base/content/abouthome/aboutHome.xhtml
+++ b/browser/base/content/abouthome/aboutHome.xhtml
@@ -75,8 +75,7 @@
       <div id="searchContainer">
         <form name="searchForm" id="searchForm" onsubmit="onSearchSubmit(event)">
           <div id="searchLogoContainer"><img id="searchEngineLogo"/></div>
-          <input type="text" name="q" value="" id="searchText" maxlength="256"
-                 autofocus="autofocus"/>
+          <input type="text" name="q" value="" id="searchText" maxlength="256"/>
           <input id="searchSubmit" type="submit" value="&abouthome.searchEngineButton.label;"/>
         </form>
       </div>
@@ -92,16 +91,17 @@
     <div class="spacer"/>
 
     <div id="launcher" session="true">
+      <button class="launchButton" id="downloads">&abouthome.downloadsButton.label;</button>
       <button class="launchButton" id="bookmarks">&abouthome.bookmarksButton.label;</button>
       <button class="launchButton" id="history">&abouthome.historyButton.label;</button>
-      <button class="launchButton" id="settings">&abouthome.settingsButton.label;</button>
+      <button class="launchButton" id="apps" hidden="true">&abouthome.appsButton.label;</button>
       <button class="launchButton" id="addons">&abouthome.addonsButton.label;</button>
-      <button class="launchButton" id="downloads">&abouthome.downloadsButton.label;</button>
       <button class="launchButton" id="sync">&syncBrand.shortName.label;</button>
+      <button class="launchButton" id="settings">&abouthome.settingsButton.label;</button>
       <div id="restorePreviousSessionSeparator"/>
       <button class="launchButton" id="restorePreviousSession">&historyRestoreLastSession.label;</button>
     </div>
 
-    <a id="aboutMozilla" href="http://www.mozilla.com/about/"/>
+    <a id="aboutMozilla" href="http://www.mozilla.org/about/"/>
   </body>
 </html>
