--- a/accessible/tests/mochitest/test_nsIAccessibleDocument.html
+++ b/accessible/tests/mochitest/test_nsIAccessibleDocument.html
@@ -40,7 +40,7 @@
 
         // attributes should contain tag:body
         attributes = docAcc.attributes;
-        is(attributes.getStringProperty("tag"), "BODY",
+        is(attributes.getStringProperty("tag"), "body",
            "Wrong attribute on document!");
 
         // nsIAccessibleDocument
