Bug 738440 - Support queryCommandState("stylewithcss"); r=ehsan
UltraBlame original commit: cfcdf9a80f363c126687af797c0182c7f8c4c74a

--- a/content/html/content/test/test_bug408231.html
+++ b/content/html/content/test/test_bug408231.html
@@ -90,7 +90,7 @@
       ["removeformat", "exception"],
       ["selectall", "exception"],
       ["strikethrough", "false"],
-      ["styleWithCSS", "exception"],
+      ["styleWithCSS", "false"],
       ["subscript", "false"],
       ["superscript", "false"],
       ["underline", "false"],
@@ -130,7 +130,7 @@
       ["removeformat", ""],
       ["selectall", ""],
       ["strikethrough", ""],
-      ["styleWithCSS", "exception"],
+      ["styleWithCSS", ""],
       ["subscript", ""],
       ["superscript", ""],
       ["underline", ""],
