Bug 741322 - Refactor debugger UI, make it slimmer; r=past
UltraBlame original commit: 1b6f644f276eecac7224adc46edbb5a46a44c87a

--- a/browser/devtools/debugger/test/browser_dbg_iframes.html
+++ b/browser/devtools/debugger/test/browser_dbg_iframes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-<head><title>Browser Debugger IFrame Test Tab</title>
+<head><meta charset='utf-8'/><title>Browser Debugger IFrame Test Tab</title>
 
 
 </head>
