--- a/browser/devtools/debugger/test/browser_dbg_displayName.html
+++ b/browser/devtools/debugger/test/browser_dbg_displayName.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-<head><title>Browser Debugger Test Tab</title>
+<head><meta charset='utf-8'/><title>Browser Debugger Test Tab</title>
 
 
 <script type="text/javascript">
