--- a/browser/devtools/debugger/test/browser_dbg_tab1.html
+++ b/browser/devtools/debugger/test/browser_dbg_tab1.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Browser Debugger Test Tab</title>
+  <head>
+    <meta charset='utf-8'/>
+    <title>Browser Debugger Test Tab</title>
     
 
-	</head>
-	<body>
-	</body>
+  </head>
+  <body>
+  </body>
 </html>
