--- a/browser/devtools/debugger/test/browser_dbg_update-editor-mode.html
+++ b/browser/devtools/debugger/test/browser_dbg_update-editor-mode.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Browser Debugger Update Editor Mode Test</title>
+  <head>
+    <meta charset='utf-8'/>
+    <title>Browser Debugger Update Editor Mode Test</title>
     
 
     <script type="text/javascript" src="test-script-switching-01.js?q=a"></script>
     <script type="text/javascript" src="test-editor-mode?a=b"></script>
-	</head>
-	<body>
-	</body>
+  </head>
+  <body>
+  </body>
 </html>
