--- a/dom/tests/mochitest/bugs/test_bug558973.html
+++ b/dom/tests/mochitest/bugs/test_bug558973.html
@@ -22,14 +22,18 @@
 var child = document.createTextNode("a");
 
 var text = document.createTextNode("a");
-var exception = 0;
+var exception = "";
+var exceptionCode = 0;
 try {
     text.appendChild(child);
 }
 catch (e) {
-    exception = e.code;
+    exception = e.name;
+    exceptionCode = e.code;
 }
-is(exception, DOMException.HIERARCHY_REQUEST_ERR,
+is(exception, "HierarchyRequestError",
+   "Expected HierarchyRequestError");
+is(exceptionCode, DOMException.HIERARCHY_REQUEST_ERR,
    "Expected DOMException.HIERARCHY_REQUEST_ERR");
 
 </script>
