Bug 561664 - document.activeElement should never return native anonymous content, r=enndeakin
UltraBlame original commit: 032d43b1770f0ffe0c0112d2b426527f57f27494

--- a/content/events/test/test_bug238987.html
+++ b/content/events/test/test_bug238987.html
@@ -61,6 +61,7 @@
          expected + "], got [" + e.target.id + "]");
     } else {
       var expected = forwardFocusArray.shift();
+      is(e.target, document.activeElement, "Wrong activeElement!");
       ok(expected == e.target.id,
          "(focus) Forward tabbing, expected [" +
          expected + "], got [" + e.target.id + "]");
