Backed out 13 changesets (bug 838467, bug 849739, bug 749086) for Marionette failures.
UltraBlame original commit: 81dc5a203ac28c0914d916faf34811303bc06065

--- a/dom/tests/mochitest/general/test_interfaces.html
+++ b/dom/tests/mochitest/general/test_interfaces.html
@@ -45,6 +45,7 @@ var interfaceNamesInGlobalScope =
     "DeviceMotionEvent",
     "GetSVGDocument",
     "SVGAnimatedPreserveAspectRatio",
+    "MozSmsRequest",
     "SVGViewElement",
     "HTMLTableSectionElement",
     "HTMLCollection",
@@ -425,6 +426,7 @@ var interfaceNamesInGlobalScope =
     "SVGTests",
     "RGBColor",
     "HTMLLabelElement",
+    "MozSmsCursor",
     "EventSource",
     "MozNavigatorSms",
     "MozNavigatorMobileMessage",
@@ -548,8 +550,7 @@ var interfaceNamesInGlobalScope =
     "SpeechSynthesisEvent",
     "PushManager",
     "StyleSheetAddedEvent",
-    "StyleSheetRemovedEvent",
-    "MozMobileMessageThread",
+    "StyleSheetRemovedEvent"
   ]
 
 for (var i in SpecialPowers.Components.interfaces) {
