Backed out changeset 9983874bfa63 (bug 854467) for bustage on a CLOSED TREE.
UltraBlame original commit: 974726290de1761f5df6d3fda7ff79dacd0e4979

--- a/dom/plugins/test/mochitest/test_refresh_navigator_plugins.html
+++ b/dom/plugins/test/mochitest/test_refresh_navigator_plugins.html
@@ -41,7 +41,7 @@
       ok(!tagTestPlugin.disabled, "test plugin should not be disabled");
 
       nextTest = testPart2;
-      tagTestPlugin.enabledState = Components.interfaces.nsIPluginTag.STATE_DISABLED;
+      tagTestPlugin.disabled = true;
 
       function testPart2() {
         var navTestPlugin = navigator.plugins.namedItem("Test Plug-in");
@@ -49,7 +49,7 @@
         ok(!navigator.mimeTypes[mimeType.type], "now navigator.mimeTypes should not have an entry for '" + mimeType.type + "'");
 
         nextTest = testPart3;
-        tagTestPlugin.enabledState = Components.interfaces.nsIPluginTag.STATE_ENABLED;
+        tagTestPlugin.disabled = false;
       }
 
       function testPart3() {
