Bug 860952 - Add error site information to unexpectedCallbackAndFinish callback r=jsmith
UltraBlame original commit: 10f5180c8d25c660af0894e5648ead05cd2fc1f8

--- a/dom/media/tests/mochitest/test_getUserMedia_basicAudio.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_basicAudio.html
@@ -32,9 +32,9 @@
       playback.playMedia(false, function () {
         aStream.stop();
         SimpleTest.finish();
-      }, unexpectedCallbackAndFinish);
+      }, unexpectedCallbackAndFinish(new Error));
 
-    }, unexpectedCallbackAndFinish);
+    }, unexpectedCallbackAndFinish(new Error));
 
   }, true);
 
