--- a/dom/media/tests/mochitest/test_getUserMedia_gumWithinGum.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_gumWithinGum.html
@@ -42,13 +42,13 @@
             audioStream.stop();
             videoStream.stop();
             SimpleTest.finish();
-          }, unexpectedCallbackAndFinish);
+          }, unexpectedCallbackAndFinish(new Error));
 
-        }, unexpectedCallbackAndFinish);
+        }, unexpectedCallbackAndFinish(new Error));
 
-      }, unexpectedCallbackAndFinish);
+      }, unexpectedCallbackAndFinish(new Error));
 
-    }, unexpectedCallbackAndFinish);
+    }, unexpectedCallbackAndFinish(new Error));
   }, true);
 
 </script>
