--- a/dom/media/tests/mochitest/test_getUserMedia_stopAudioStream.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_stopAudioStream.html
@@ -30,8 +30,8 @@
       var audioStreamPlayback = new LocalMediaStreamPlayback(testAudio, stream);
 
       audioStreamPlayback.playMediaWithStreamStop(false, SimpleTest.finish,
-        unexpectedCallbackAndFinish);
-    }, unexpectedCallbackAndFinish);
+        unexpectedCallbackAndFinish(new Error));
+    }, unexpectedCallbackAndFinish(new Error));
   }, true);
 
 </script>
