--- a/dom/media/tests/mochitest/test_getUserMedia_stopAudioStreamWithFollowupAudio.html
+++ b/dom/media/tests/mochitest/test_getUserMedia_stopAudioStreamWithFollowupAudio.html
@@ -37,13 +37,13 @@
           streamPlayback.playMedia(false, function() {
             secondStream.stop();
             SimpleTest.finish();
-          }, unexpectedCallbackAndFinish);
+          }, unexpectedCallbackAndFinish(new Error));
 
-        }, unexpectedCallbackAndFinish);
+        }, unexpectedCallbackAndFinish(new Error));
 
-      }, unexpectedCallbackAndFinish);
+      }, unexpectedCallbackAndFinish(new Error));
 
-    }, unexpectedCallbackAndFinish);
+    }, unexpectedCallbackAndFinish(new Error));
   }, true);
 
 </script>
