--- a/content/html/document/test/test_bug324378.html
+++ b/content/html/document/test/test_bug324378.html
@@ -66,8 +66,7 @@
   is($("m"), null, "Unexpected node with id=m");
 
   is(html.getAttribute("foo"), "h", "Unexpected 'foo' value on <html>");
-  // The line below can be uncommented once the HTML5 parser is on by default
-  // is(head.getAttribute("foo"), null, "Unexpected 'foo' value on <head>");
+  is(head.getAttribute("foo"), null, "Unexpected 'foo' value on <head>");
   is(body.getAttribute("foo"), "n", "Unexpected 'foo' value on <body>");
 
 </script>
