--- a/dom/media/webspeech/synth/test/test_global_queue_cancel.html
+++ b/dom/media/webspeech/synth/test/test_global_queue_cancel.html
@@ -5,13 +5,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Test for Bug 1150315: Web Speech API check all classes are present</title>
+  <title>Test for Bug 1188099: Calling cancel() should work correctly with global queue</title>
   <script type="application/javascript" src="/tests/SimpleTest/SimpleTest.js"></script>
   <script type="application/javascript" src="common.js"></script>
   <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
 </head>
 <body>
-<a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1150315">Mozilla Bug 1150315</a>
+<a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1188099">Mozilla Bug 1188099</a>
 <p id="display"></p>
 <iframe id="testFrame"></iframe>
 <div id="content" style="display: none">
@@ -20,14 +20,13 @@
 <pre id="test">
 <script type="application/javascript">
 
-/** Test for Bug 1150315 **/
+/** Test for Bug 525444 **/
 
 SimpleTest.waitForExplicitFinish();
 
-SpecialPowers.pushPrefEnv(
-  { set: [['media.webspeech.synth.enabled', true],
-          ['media.webspeech.synth.force_global_queue', false]] },
-  function() { document.getElementById("testFrame").src = "file_speech_cancel.html"; });
+SpecialPowers.pushPrefEnv({ set: [['media.webspeech.synth.enabled', true],
+                                  ['media.webspeech.synth.force_global_queue', true]] },
+                          function() { document.getElementById("testFrame").src = "file_global_queue_cancel.html"; });
 
 </script>
 </pre>
