--- a/testing/web-platform/tests/selection/addRange.html
+++ b/testing/web-platform/tests/selection/addRange.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>Selection.addRange() tests</title>
 <div id=log></div>
+<meta name="timeout" content="long">
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
 <script src=common.js></script>
