--- a/browser/devtools/storage/test/storage-unsecured-iframe.html
+++ b/browser/devtools/storage/test/storage-unsecured-iframe.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <script>
-
+"use strict";
 document.cookie = "uc1=foobar; domain=.example.org; path=/; secure=true";
 localStorage.setItem("iframe-u-ls1", "foobar");
 sessionStorage.setItem("iframe-u-ss1", "foobar1");
