Bug 1196514 - remove dom.messagechannel.enabled pref, r=smaug
UltraBlame original commit: 6c1d2577dcb305ca390917057343cafe404da7c5

--- a/dom/base/test/test_messagePort.html
+++ b/dom/base/test/test_messagePort.html
@@ -107,7 +107,7 @@
   }
 
   SimpleTest.waitForExplicitFinish();
-  SpecialPowers.pushPrefEnv({"set": [["dom.messageChannel.enabled", true]]}, runTest);
+  runTest();
 
 </script>
 </body>
