--- a/dom/messagechannel/tests/test_messageChannel_post.html
+++ b/dom/messagechannel/tests/test_messageChannel_post.html
@@ -70,7 +70,7 @@
   }
 
   SimpleTest.waitForExplicitFinish();
-  SpecialPowers.pushPrefEnv({"set": [["dom.messageChannel.enabled", true]]}, start);
+  start();
   </script>
 </body>
 </html>
