--- a/dom/messagechannel/tests/test_messageChannel_unshipped.html
+++ b/dom/messagechannel/tests/test_messageChannel_unshipped.html
@@ -117,7 +117,7 @@
   }
 
   SimpleTest.waitForExplicitFinish();
-  SpecialPowers.pushPrefEnv({"set": [["dom.messageChannel.enabled", true]]}, runTests);
+  runTests();
   </script>
 </body>
 </html>
