--- a/dom/messagechannel/tests/test_messageChannel_bug1178076.html
+++ b/dom/messagechannel/tests/test_messageChannel_bug1178076.html
@@ -32,7 +32,7 @@
   }
 
   SimpleTest.waitForExplicitFinish();
-  SpecialPowers.pushPrefEnv({"set": [["dom.messageChannel.enabled", true]]}, runTest);
+  runTest();
   </script>
 </body>
 </html>
