--- a/dom/messagechannel/tests/test_messageChannel_cloning.html
+++ b/dom/messagechannel/tests/test_messageChannel_cloning.html
@@ -64,7 +64,7 @@
   }
 
   SimpleTest.waitForExplicitFinish();
-  SpecialPowers.pushPrefEnv({"set": [["dom.messageChannel.enabled", true]]}, runTest);
+  runTest();
   </script>
 </body>
 </html>
