--- a/dom/messagechannel/tests/test_messageChannel_pingpong.html
+++ b/dom/messagechannel/tests/test_messageChannel_pingpong.html
@@ -71,7 +71,7 @@
   }
 
   SimpleTest.waitForExplicitFinish();
-  SpecialPowers.pushPrefEnv({"set": [["dom.messageChannel.enabled", true]]}, runTest);
+  runTest();
   </script>
 </body>
 </html>
