--- a/dom/messagechannel/tests/test_messageChannel_start.html
+++ b/dom/messagechannel/tests/test_messageChannel_start.html
@@ -229,7 +229,7 @@
 
   SimpleTest.waitForExplicitFinish();
   SimpleTest.requestFlakyTimeout("untriaged");
-  SpecialPowers.pushPrefEnv({"set": [["dom.messageChannel.enabled", true]]}, runTests);
+  runTests();
   </script>
 </body>
 </html>
