--- a/dom/messagechannel/tests/test_messageChannel_worker.html
+++ b/dom/messagechannel/tests/test_messageChannel_worker.html
@@ -54,7 +54,7 @@
   }
 
   SimpleTest.waitForExplicitFinish();
-  SpecialPowers.pushPrefEnv({"set": [["dom.messageChannel.enabled", true]]}, runTests);
+  runTests();
   </script>
 </body>
 </html>
