--- a/dom/security/test/csp/file_base-uri.html
+++ b/dom/security/test/csp/file_base-uri.html
@@ -4,7 +4,7 @@
     <title>Bug 1045897 - Test CSP base-uri directive</title>
     <base href="http://mochi.test">
   </head>
-<body>
+<body onload='window.parent.postMessage({result: document.baseURI}, "*");'>
   
 </body>
 </html>
