Back out 7 changesets (bug 1177018) for debug b2g assertion failures in test_bug982141.html CLOSED TREE
Backed out changeset 40fdd735520d (bug 1177018)
Backed out changeset a82c39bb97ab (bug 1177018)
Backed out changeset dbb14a5cd2cd (bug 1177018)
Backed out changeset 112ec6bdaf4e (bug 1177018)
Backed out changeset 486f9a11fcbd (bug 1177018)
Backed out changeset 8e54cc5e6901 (bug 1177018)
Backed out changeset c2a30b4f3a7c (bug 1177018)

UltraBlame original commit: b04dc4d776f9e04785bea0e4f2abc3cf252648a8

--- a/gfx/layers/apz/test/test_layerization.html
+++ b/gfx/layers/apz/test/test_layerization.html
@@ -14,8 +14,6 @@
   <style>
   #container {
     display: flex;
-    overflow: scroll;
-    height: 500px;
   }
   .outer-frame {
     height: 500px;
@@ -23,7 +21,7 @@
     flex-basis: 100%;
     background: repeating-linear-gradient(#CCC, #CCC 100px, #BBB 100px, #BBB 200px);
   }
-  #container-content {
+  #page-content {
     height: 200%;
   }
   </style>
@@ -44,11 +42,11 @@
   </div>
   <iframe id="outer3" class="outer-frame" src="helper_iframe1.html"></iframe>
   <iframe id="outer4" class="outer-frame" src="helper_iframe2.html"></iframe>
-
-
-
-  <div id="container-content"></div>
 </div>
+
+
+
+<div id="page-content"></div>
 <pre id="test">
 <script type="application/javascript;version=1.7">
 
@@ -150,18 +148,8 @@ function startTest() {
 }
 
 SimpleTest.waitForExplicitFinish();
-SimpleTest.testInChaosMode();
+SimpleTest.waitForFocus(startTest, window);
 
-// Disable smooth scrolling, because it results in long-running scroll
-// animations that can result in a 'scroll' event triggered by an earlier
-// wheel event as corresponding to a later wheel event.
-// Also enable APZ test logging, since we use that data to determine whether
-// a scroll frame was layerized.
-SpecialPowers.pushPrefEnv({"set": [["general.smoothScroll", false],
-                                   ["apz.test.logging_enabled", true]]},
-                          function() {
-                            SimpleTest.waitForFocus(startTest, window);
-                          });
 </script>
 </pre>
 </body>
