--- a/b2g/chrome/content/shell.html
+++ b/b2g/chrome/content/shell.html
@@ -3,7 +3,7 @@
 
 
 
-<html xmlns="http://www.w3.org/1999/xhtml "
+<html xmlns="http://www.w3.org/1999/xhtml"
       id="shell"
       windowtype="navigator:browser"
 #ifdef ANDROID
@@ -25,7 +25,7 @@
   <script type="application/javascript;version=1.8"
           src="chrome://b2g/content/shell.js"> </script>
 
-#ifndef MOZ_WIDGET_GONK
+#ifndef ANDROID
   
   <script type="application/javascript;version=1.8"
           src="chrome://b2g/content/desktop.js"> </script>
