--- a/dom/html/test/forms/test_input_sanitization.html
+++ b/dom/html/test/forms/test_input_sanitization.html
@@ -18,6 +18,8 @@
 </div>
 <script type="application/javascript">
 
+SimpleTest.requestLongerTimeout(2);
+
 /**
  * This files tests the 'value sanitization algorithm' for the various input
  * types. Note that an input's value is affected by more than just its type's
