Bug 1201822 - Update web-platform-tests to revision d0571e01e1a2e4b8c5f696af2f81cbc1be9a5842, a=testonly
UltraBlame original commit: a3e3ca97b304ecfaf74862403367a31ea79e5c83

--- a/testing/web-platform/tests/content-security-policy/blink-contrib/combine-header-and-meta-policies.sub.html
+++ b/testing/web-platform/tests/content-security-policy/blink-contrib/combine-header-and-meta-policies.sub.html
@@ -16,8 +16,9 @@
 </head>
 
 <body>
-    This test checks that we enforce all the supplied policies. This test passe if it doesn&apos;t alert fail and if the style doesn&apos;t apply.
-    Check that a SecurityPolicyViolationEvent is fired upon blocking an image.
+<p>Test passes if both style and image are blocked and a report is generated for the
+    style block from the header-supplied policy.</p>
+
     <script>
         var img = document.createElement('img');
         img.src = '../support/fail.png';
