--- a/testing/web-platform/tests/content-security-policy/blink-contrib-2/base-uri-allow.sub.html
+++ b/testing/web-platform/tests/content-security-policy/blink-contrib-2/base-uri-allow.sub.html
@@ -14,7 +14,13 @@
     <base href="http://www1.{{host}}:{{ports[http][0]}}/">
     <script>
         test(function() {
-            assert_equals(document.baseURI, 'http://www1.{{host}}:{{ports[http][0]}}/');
+            if ('{{ports[http][0]}}' == '80' ||
+               '{{ports[http][0]}}' == '443') {
+                assert_equals(document.baseURI, 'http://www1.{{host}}/');
+            } else {
+                assert_equals(document.baseURI, 'http://www1.{{host}}' + ':{{ports[http][0]}}/');
+            }
+
             log("TEST COMPLETE")
         });
 
