--- a/testing/web-platform/tests/content-security-policy/blink-contrib-2/form-action-src-javascript-blocked.sub.html
+++ b/testing/web-platform/tests/content-security-policy/blink-contrib-2/form-action-src-javascript-blocked.sub.html
@@ -11,14 +11,13 @@
     
 
 
-    <script>
+    <script nonce='noncynonce'>
         window.addEventListener('load', function() {
             setTimeout(function() {
                 document.getElementById('submit').click();
                 log("TEST COMPLETE");
             }, 0);
         });
-
     </script>
 </head>
 
@@ -29,7 +28,7 @@
     </form>
     <p>Tests that blocking form actions works correctly. If this test passes, a CSP violation will be generated, and will not see a JavaScript alert.</p>
     <div id="log"></div>
-    <script async defer src="../support/checkReport.sub.js?reportExists=true&amp;reportField=violated-directive&amp;reportValue=form-action%20&apos;none&apos;"></script>
+    <script async defer src="../support/checkReport.sub.js?reportExists=true"></script>
 </body>
 
 </html>
