--- a/testing/web-platform/tests/content-security-policy/blink-contrib/worker-connect-src-allowed.sub.html
+++ b/testing/web-platform/tests/content-security-policy/blink-contrib/worker-connect-src-allowed.sub.html
@@ -17,7 +17,7 @@
 <body>
     <script>
         try {
-            var worker = new Worker('http://{{host}}:{{ports[http][0]}}/content-security-policy/blink-contrib/resources/worker-make-xhr.js');
+            var worker = new Worker('http://{{host}}:{{ports[http][0]}}/content-security-policy/blink-contrib/resources/worker-make-xhr.sub.js');
             worker.onmessage = function(event) {
                 alert_assert(event.data);
             };
