--- a/dom/tests/mochitest/chrome/test_window_getAppLocales.html
+++ b/dom/tests/mochitest/chrome/test_window_getAppLocales.html
@@ -14,7 +14,7 @@
 <div id="content" style="display: none">
 <script>
 
-let appLocales = window.getAppLocales();
+let appLocales = window.getAppLocalesAsBCP47();
 ok(appLocales.length > 0, "getAppLocales returns at least one locale.");
 is(appLocales[0], "en-US", "The first app locale should be en-US.");
 
