--- a/devtools/shared/heapsnapshot/tests/mochitest/test_DominatorTree_01.html
+++ b/devtools/shared/heapsnapshot/tests/mochitest/test_DominatorTree_01.html
@@ -12,8 +12,11 @@
 <body>
 <pre id="test">
 <script>
+"use strict";
+/* global window, ChromeUtils, DominatorTree */
+
 SimpleTest.waitForExplicitFinish();
-window.onload = function() {
+window.onload = function () {
   const path = ChromeUtils.saveHeapSnapshot({ runtime: true });
   const snapshot = ChromeUtils.readHeapSnapshot(path);
 
