--- a/devtools/shared/heapsnapshot/tests/mochitest/test_SaveHeapSnapshot.html
+++ b/devtools/shared/heapsnapshot/tests/mochitest/test_SaveHeapSnapshot.html
@@ -12,8 +12,10 @@
 <body>
 <pre id="test">
 <script>
+"use strict";
+
 SimpleTest.waitForExplicitFinish();
-window.onload = function() {
+window.onload = function () {
   ok(ChromeUtils, "The ChromeUtils interface should be exposed in chrome windows.");
   ChromeUtils.saveHeapSnapshot({ runtime: true });
   ok(true, "Should save a heap snapshot and shouldn't throw.");
