--- a/docshell/test/navigation/test_bug386782.html
+++ b/docshell/test/navigation/test_bug386782.html
@@ -40,7 +40,7 @@
     var gTestNum = -1;
     var gTest = null;
 
-    window.onload = goNext();
+    window.onload = goNext;
 
     function goNext() {
       gTestNum++;
