Bug 1343589 - Add comments to test_animation_observers_[a]sync.html to describe how they differ r=hiro
MozReview-Commit-ID: HxhsaOKDAsq

UltraBlame original commit: 57c53ff1d9827624810933b6ad8a9b18e2f57ff7

--- a/dom/animation/test/chrome/test_animation_observers_async.html
+++ b/dom/animation/test/chrome/test_animation_observers_async.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
-<title>Test chrome-only MutationObserver animation notifications</title>
+<title>
+Test chrome-only MutationObserver animation notifications (async tests)
+</title>
+
+
+
+
+
+
+
+
+
+
 <script src="chrome://mochikit/content/tests/SimpleTest/SimpleTest.js"></script>
 <script src="chrome://mochikit/content/tests/SimpleTest/EventUtils.js"></script>
 <script src="../testcommon.js"></script>
