--- a/dom/animation/test/chrome/test_animation_observers_sync.html
+++ b/dom/animation/test/chrome/test_animation_observers_sync.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
 <title>
-Test chrome-only MutationObserver animation notifications for sync APIs
+Test chrome-only MutationObserver animation notifications (sync tests)
 </title>
+
+
+
+
+
+
+
+
+
+
 <script type="application/javascript" src="../testharness.js"></script>
 <script type="application/javascript" src="../testharnessreport.js"></script>
 <script type="application/javascript" src="../testcommon.js"></script>
