--- a/editor/composer/test/test_bug338427.html
+++ b/editor/composer/test/test_bug338427.html
@@ -21,7 +21,8 @@
 /** Test for Bug 338427 **/
 function init() {
     var onSpellCheck =
-      SpecialPowers.Cu.import("resource://gre/modules/AsyncSpellCheckTestHelper.jsm")
+      SpecialPowers.Cu.import(
+        "resource://testing-common/AsyncSpellCheckTestHelper.jsm")
                    .onSpellCheck;
     var textarea = document.getElementById("editor");
     var editor = SpecialPowers.wrap(textarea).editor;
