--- a/dom/smil/test/test_smilWithTransition.html
+++ b/dom/smil/test/test_smilWithTransition.html
@@ -38,7 +38,7 @@
       return waitForAnimationFrames(2);
     }).then(function() {
       var anim = document.getAnimations()[0];
-      todo(!anim, 'Transition should not be created by restyling for SMIL');
+      ok(!anim, 'Transition should not be created by restyling for SMIL');
       SimpleTest.finish();
     });
   }
