Bug 1435180 - Make existing tests aware of strict keypress event dispatch r=smaug
We'll stop dispatching keypress events on web contents for conforming to spec of
UI Events.  Some existing tests assumes that keypress events are fired even
when non-printable keys are pressed.

This patch makes them check the pref,
"dom.keyboardevent.keypress.dispatch_non_printable_keys_only_system_group_in_content"
and only listen to keydown event instead of keypress even if the pref is true
and expected key event is not a printable key press.

MozReview-Commit-ID: 6bKoK7dsB0l

UltraBlame original commit: b432138bab084801c754dd5e517b5092ae46edd5

--- a/browser/base/content/test/permissions/permissions.html
+++ b/browser/base/content/test/permissions/permissions.html
@@ -7,9 +7,10 @@
     <meta charset="utf8">
   </head>
 <script>
+var gKeyDowns = 0;
 var gKeyPresses = 0;
 </script>
-  <body onkeypress="gKeyPresses++;">
+  <body onkeydown="gKeyDowns++;" onkeypress="gKeyPresses++">
 	
 
   <button id="geo" onclick="navigator.geolocation.getCurrentPosition(() => {})">Geolocation</button>
