--- a/dom/tests/mochitest/pointerlock/test_pointerlock-api.html
+++ b/dom/tests/mochitest/pointerlock/test_pointerlock-api.html
@@ -33,7 +33,8 @@
           ["full-screen-api.unprefix.enabled", true],
           ["full-screen-api.allow-trusted-requests-only", false],
           ["full-screen-api.transition-duration.enter", "0 0"],
-          ["full-screen-api.transition-duration.leave", "0 0"]
+          ["full-screen-api.transition-duration.leave", "0 0"],
+          ["dom.webcomponents.shadowdom.enabled", true]
         ]}, nextTest);
 
         // Run the tests which go full-screen in new window, as Mochitests
@@ -49,6 +50,7 @@
           "file_movementXY.html",
           "file_nestedFullScreen.html",
           "file_pointerlock-api.html",
+          "file_pointerlock-api-with-shadow.html",
           "file_pointerlockerror.html",
           "file_pointerLockPref.html",
           "file_removedFromDOM.html",
