Bug 1436926 - part 2: Remove unnecessary KeyboardEvent.code specification of callers of EventUtils.synthesizeKey() r=smaug
Now, callers of EventUtils.synthesizeKey() don't need to specify
KeyboardEvent.code value anymore if they assume that active keyboard layout
is US keyboard layout.

Note that this patch changes the meaning of only test_bug551434.html.
Some callers in it don't match the key value and code value but that looks
like that they don't checking such odd keyboard events.  So, they must be
bug of the test.

MozReview-Commit-ID: Itxo7yZ9rkK

UltraBlame original commit: b1aba58ebcddae563f4b949d357c9193b2d78897

--- a/dom/events/test/test_bug238987.html
+++ b/dom/events/test/test_bug238987.html
@@ -92,7 +92,7 @@
 
   function tab() {
     // Send tab key events.
-    synthesizeKey("KEY_Tab", {code: "Tab", shiftKey: activateShift});
+    synthesizeKey("KEY_Tab", {shiftKey: activateShift});
     if (shouldStop) {
       // Did focus handling succeed
       is(forwardFocusArray.length, 0,
