Bug 1434837 - Make autocomplete and satchel listen to keypress event at the system event group r=mak
The autocomplete module listens to keypress event for both printable keys and
non-printable keys a lot.  However, we'll stop dispatching keypress event for
non-printable keys in the default event group of web content.  So, autocomplete
should listen to keypress events at the system event group.

Note that it's difficult to change keypress event listeners to keydown event
listeners because if we stop keypress events at preceding keydown event in
autocomplete or satchel module, some other modules fail to handle keydown or
keypress event before autocomplete and it's not easy to investigate which
module's which keypress event listener should be changed to keydown event
listener.  Therefore, this patch doesn't do it at least for now.

MozReview-Commit-ID: 7e3aklmKrXu

UltraBlame original commit: c0b4ca69376c1b8cd1c22a202100363631b5b9a6

--- a/toolkit/content/tests/mochitest/test_autocomplete_change_after_focus.html
+++ b/toolkit/content/tests/mochitest/test_autocomplete_change_after_focus.html
@@ -79,7 +79,7 @@
         resolve();
       }
 
-      field.addEventListener("keypress", handleEnter, true);
+      SpecialPowers.addSystemEventListener(field, "keypress", handleEnter, true);
     });
 
     field.focus();
