--- a/gfx/layers/apz/test/mochitest/test_group_pointerevents.html
+++ b/gfx/layers/apz/test/mochitest/test_group_pointerevents.html
@@ -20,7 +20,7 @@
     SimpleTest.waitForExplicitFinish();
     window.onload = function() {
       runSubtestsSeriallyInFreshWindows(subtests)
-      .then(SimpleTest.finish);
+      .then(SimpleTest.finish, SimpleTest.finish);
     };
   }
 
