Bug 1432079 - Implement PaymentItemType. r=baku
MozReview-Commit-ID: Jpj9arQ9MaE

UltraBlame original commit: 6804cac955f447386827278b84f27b60bb15838d

--- a/dom/payments/test/test_constructor.html
+++ b/dom/payments/test/test_constructor.html
@@ -75,6 +75,14 @@
           currency: "USD",
           value: "40.00"
         }
+      },
+      {
+        label: "Tax",
+        amount: {
+          currency: "USD",
+          value: "5.00"
+        },
+        type: "tax"
       }
     ],
     modifiers: [
