--- a/editor/spellchecker/tests/test_bug717433.html
+++ b/editor/spellchecker/tests/test_bug717433.html
@@ -4,32 +4,33 @@
 
 
 <head>
-  <title>Test for Bug 1204147</title>
+  <title>Test for Bug 717433</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
   <link rel="stylesheet" href="/tests/SimpleTest/test.css">
 </head>
 <body>
-<a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=1204147">Mozilla Bug 1204147</a>
+<a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=717433">Mozilla Bug 717433</a>
 <p id="display"></p>
 <iframe id="content"></iframe>
-</div>
 
+</div>
 <pre id="test">
 <script class="testbody" type="text/javascript">
 
-/** Test for Bug 1204147 **/
+/** Test for Bug 717433 **/
 SimpleTest.waitForExplicitFinish();
 var content = document.getElementById('content');
-// Load a subframe containing an editor with using "en-GB". At first
-// load, it will set the dictionary to "en-GB". The bug was that a content preference
-// was also created. At second load, we check the dictionary for another element,
-// one that should use "en-US". With the bug corrected, we get "en-US", before
-// we got "en-GB" from the content preference.
+// Load a subframe containing an editor with language "en". At first
+// load, it will set the dictionary to en-GB or en-US. We set the other one.
+// At second load, it will return the current dictionary. We can check that the
+// dictionary is correctly remembered between loads.
 
 var firstLoad = true;
+var expected = "";
 var script;
 
 var loadListener = function(evt) {
+
   if (firstLoad) {
     script = SpecialPowers.loadChromeScript(function() {
       var dir = Cc["@mozilla.org/file/directory_service;1"]
@@ -37,14 +38,14 @@ var loadListener = function(evt) {
                   .get("CurWorkD", Ci.nsIFile);
       dir.append("tests");
       dir.append("editor");
-      dir.append("composer");
-      dir.append("test");
+      dir.append("spellchecker");
+      dir.append("tests");
 
       var hunspell = Cc["@mozilla.org/spellchecker/engine;1"]
                        .getService(Ci.mozISpellCheckingEngine);
 
       // Install en-GB dictionary.
-      en_GB = dir.clone();
+      var en_GB = dir.clone();
       en_GB.append("en-GB");
       hunspell.addDirectory(en_GB);
 
@@ -56,13 +57,7 @@ var loadListener = function(evt) {
   }
 
   var doc = evt.target.contentDocument;
-  var elem;
-  if (firstLoad) {
-    elem = doc.getElementById('en-GB');
-  } else {
-    elem = doc.getElementById('en-US');
-  }
-
+  var elem = doc.getElementById('textarea');
   var editor = SpecialPowers.wrap(elem).QueryInterface(SpecialPowers.Ci.nsIDOMNSEditableElement).editor;
   editor.setSpellcheckUserOverride(true);
   var inlineSpellChecker = editor.getInlineSpellChecker(true);
@@ -78,26 +73,26 @@ var loadListener = function(evt) {
     if (firstLoad) {
       firstLoad = false;
 
-       // First time around, the element's language should be used.
-      is (currentDictonary, "en-GB", "unexpected lang " + currentDictonary + " instead of en-GB");
-
-      // Note that on second load, we load a different page, which does NOT have the trouble-causing
-      // contenteditable in it. Sadly, loading the same page with the trouble-maker in it
-      // doesn't allow the retrieval of the spell check dictionary used for the element,
-      // because the trouble-maker causes the 'global' spell check dictionary to be set to "en-GB"
-      // (since it picks the first one from the list) before we have the chance to retrieve
-      // the dictionary for the element (which happens asynchonously after the spell check has completed).
-      content.src = 'http://mochi.test:8888/tests/editor/composer/test/bug1204147_subframe2.html?firstload=false';
+      // First time around, we get a random dictionary based on the language "en".
+      if (currentDictonary == "en-GB") {
+        spellchecker.SetCurrentDictionary("en-US");
+        expected = "en-US";
+      } else if (currentDictonary == "en-US") {
+        spellchecker.SetCurrentDictionary("en-GB");
+        expected = "en-GB";
+      } else {
+        is(true, false, "Neither en-US nor en-GB are current");
+      }
+      content.src = 'http://mochi.test:8888/tests/editor/spellchecker/tests/bug717433_subframe.html?firstload=false';
     } else {
-      // Second time around, the element should default to en-US.
-      // Without the fix, the first run sets the content preference to en-GB for the whole site.
-      is (currentDictonary, "en-US", "unexpected lang " + currentDictonary + " instead of en-US");
+      is(currentDictonary, expected, expected + " expected");
       content.removeEventListener('load', loadListener);
 
       // Remove the fake en-GB dictionary again, since it's otherwise picked up by later tests.
       script.sendSyncMessage("destroy");
 
-      // Reset the preference, so the last value we set doesn't collide with the next test.
+      // This will clear the content preferences and reset "spellchecker.dictionary".
+      spellchecker.SetCurrentDictionary("");
       SimpleTest.finish();
     }
   });
@@ -105,7 +100,7 @@ var loadListener = function(evt) {
 
 content.addEventListener('load', loadListener);
 
-content.src = 'http://mochi.test:8888/tests/editor/composer/test/bug1204147_subframe.html?firstload=true';
+content.src = 'http://mochi.test:8888/tests/editor/spellchecker/tests/bug717433_subframe.html?firstload=true';
 
 </script>
 </pre>
