Bug 1706266 - part 2: Disable some Gecko specific edit commands in release and beta channel, and all of them in nightly channel r=smaug
The telemetry result is written in bug 1706266 comment 1:
https://bugzilla.mozilla.org/show_bug.cgi?id=1706266#c1

`increasefontsize`, `decreasefontsize`, `gethtml`, `heading` and `readonly` are
obviously not used by web apps in the wild.  Therefore, they can be disabled
in all channels.

`contentReadOnly` and `insertBrOnReturn` are odd.  The usage is really low (less
than 1% of beta users).  However, the number of documents which used the command
is about 1k samples.  The result of the commands are not tiny (making the editor
not editable or changing the behavior at typing `Enter` key in `<div>`, `<p>`,
etc).  Therefore, it's hard to use them in web apps which supports not only
Gecko.  So I guess that they are collected the number of used by automated
tests of somebody because of the constant number in other beta versions.
Perhaps, we should disable it only in Nightly channel for now, and after a
couple of releases, we should try to disable those commands too later.

Depends on D130328

Differential Revision: https://phabricator.services.mozilla.com/D130329

UltraBlame original commit: 5d6a85b1788ecb66fef5ea788eba0817e07db9e2

--- a/editor/libeditor/tests/test_bug676401.html
+++ b/editor/libeditor/tests/test_bug676401.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-
-
-
+<!--
+https://bugzilla.mozilla.org/show_bug.cgi?id=676401
+-->
 <head>
   <title>Test for Bug 676401</title>
   <script src="/tests/SimpleTest/SimpleTest.js"></script>
@@ -13,7 +13,7 @@
 <a target="_blank" href="https://bugzilla.mozilla.org/show_bug.cgi?id=676401">Mozilla Bug 676401</a>
 <p id="display"></p>
 <div id="content">
-  
+  <!-- we need a blockquote to test the "outdent" command -->
   <section>
     <blockquote> not editable </blockquote>
   </section>
@@ -47,20 +47,23 @@ function ensureNobodyHasFocus() {
 }
 
 function IsCommandEnabled(command) {
-  var enabled;
-
   ensureNobodyHasFocus();
 
   // non-editable div: should return false unless alwaysEnabled
   window.getSelection().selectAllChildren(gBlock1);
-  enabled = document.queryCommandEnabled(command);
-  is(enabled, alwaysEnabledCommands.includes(command),
-     "'" + command + "' should not be enabled on a non-editable block.");
+  is(
+    document.queryCommandEnabled(command),
+    alwaysEnabledCommands.includes(command) && document.queryCommandSupported(command),
+     "'" + command + "' should not be enabled on a non-editable block."
+  );
 
-  // editable div: should return true
+  // editable div: should return true if it's supported
   window.getSelection().selectAllChildren(gBlock2);
-  enabled = document.queryCommandEnabled(command);
-  is(enabled, true, "'" + command + "' should be enabled on an editable block.");
+  is(
+    document.queryCommandEnabled(command),
+    document.queryCommandSupported(command),
+    "'" + command + "' should be enabled on an editable block."
+  );
 }
 
 function runTests() {
