--- a/editor/libeditor/tests/browserscope/test_richtext2.html
+++ b/editor/libeditor/tests/browserscope/test_richtext2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--
+BrowserScope richtext2 category tests
 
-
-
-
-
-
-
+This test is originally based on the unit test example available as part of the
+RichText2 suite:
+http://code.google.com/p/browserscope/source/browse/trunk/categories/richtext2/unittestexample.html
+-->
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
   <script src="/tests/SimpleTest/EventUtils.js"></script>
 
-  
+  <!-- utility scripts -->
   <script type="text/javascript" src="lib/richtext2/richtext2/static/js/variables.js"></script>
   <script type="text/javascript" src="lib/richtext2/richtext2/static/js/canonicalize.js"></script>
   <script type="text/javascript" src="lib/richtext2/richtext2/static/js/compare.js"></script>
@@ -24,12 +24,12 @@
   <script type="text/javascript" src="lib/richtext2/richtext2/static/js/range.js"></script>
   <script type="text/javascript" src="lib/richtext2/richtext2/static/js/units.js"></script>
   <script type="text/javascript" src="lib/richtext2/richtext2/static/js/run.js"></script>
-  
+  <!-- you do not need static/js/output.js -->
 
-  
-
-
-
+  <!--
+    Tests - note that those have the extensions .py,
+    but can be used as JS files directly.
+  -->
   <script type="text/javascript" src="lib/richtext2/richtext2/tests/selection.py"></script>
   <script type="text/javascript" src="lib/richtext2/richtext2/tests/apply.py"></script>
   <script type="text/javascript" src="lib/richtext2/richtext2/tests/applyCSS.py"></script>
@@ -49,7 +49,7 @@
   <script type="text/javascript" src="lib/richtext2/currentStatus.js"></script>
   <script type="text/javascript" src="lib/richtext2/platformFailures.js"></script>
 
-  
+  <!-- Do something -->
   <script type="text/javascript">
     // Set this constant to true in order to get the current status of the test suite.
     // This is useful for updating the currentStatus.js file when an editor bug is fixed.
@@ -207,9 +207,9 @@
                     case "div":
                       var row = results[category.id][group][test_id][structure];
                       var testName = [category.id, group, test_id, structure].join("-");
-                      (testName in knownFailures.value || testName in platformFailures.value ? todo_is : is)(
+                      (knownFailures.value[testName] || platformFailures.value[testName] ? todo_is : is)(
                         row.valscore, 1, "Browserscope richtext2 value: " + testName);
-                      (testName in knownFailures.select || testName in platformFailures.select ? todo_is : is)(
+                      (knownFailures.select[testName] || platformFailures.select[testName] ? todo_is : is)(
                         row.selscore, 1, "Browserscope richtext2 selection: " + testName);
                     }
                   }
