Bug 1739562 [wpt PR 31514] - Update text directive WPT for rangeEnd bug fix, a=testonly
Automatic update from web-platform-tests
Update text directive WPT for rangeEnd bug fix

https://crrev.com/c/2673920 fixed a bug in how rangeEnd was being
matched. This required a spec change in
https://github.com/WICG/scroll-to-text-fragment/pull/176. This CL
updates the WPT references to the spec and adds matching tests for the
changes in the spec.

Bug: 1171566
Change-Id: I1e3618d8703e2f137b32a1d31754c54192990837
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3263344
Reviewed-by: Gayane Petrosyan <gayanegoogle.com>
Commit-Queue: David Bokan <bokanchromium.org>
Cr-Commit-Position: refs/heads/main{#938925}

--

wpt-commits: 71a5b7bf8f9ccaf4dbf5ff6c1bccafc267936bae
wpt-pr: 31514

UltraBlame original commit: 2919a0d420d6d1684f1919f7edd76d9a213f7f46

--- a/testing/web-platform/tests/scroll-to-text-fragment/find-range-from-text-directive-target.html
+++ b/testing/web-platform/tests/scroll-to-text-fragment/find-range-from-text-directive-target.html
@@ -28,6 +28,9 @@ window.onload = function() {
   }
 </style>
 <body>
+  Won't scroll if matched:
+  match suffix
+  match suffix3
   <div class="spacer"></div>
   <p>
     The quick brown fox jumped over the lazy dog.
@@ -37,11 +40,15 @@ window.onload = function() {
     foo foo foo bar bar bar
   </p>
   <p>
+    match suffix2
+    prefix match suffix3 matchEnd suffix4 matchEnd suffix5
+  </p>
+  <p>
     Lorem
 
     <br> <i>    </i>
     <div>  &nbsp </div>
-    
+    <!-- This <p> puts lots of non textual stuff between words -->
     <div style="display: none">This isn't rendered</div>
     <div style="visibility: hidden">This also isn't visible</div>
     <iframe srcdoc="Inner Iframe"></iframe>
@@ -53,7 +60,7 @@ window.onload = function() {
 
     <br> <i>    </i>
     <div>  &nbsp </div>
-    
+    <!-- This <p> puts lots of non textual stuff between words -->
     <div style="display: none">This isn't rendered</div>
     <div style="visibility: hidden">This also isn't visible</div>
     <iframe srcdoc="Inner Iframe"></iframe>
