--- a/accessible/tests/mochitest/events/test_statechange.html
+++ b/accessible/tests/mochitest/events/test_statechange.html
@@ -18,8 +18,16 @@
           src="../states.js"></script>
 
   <script type="application/javascript">
+    function stateChange(aState, aIsExtraState, aIsEnabled, aTarget) {
+      return [EVENT_STATE_CHANGE, evt => {
+        evt.QueryInterface(nsIAccessibleStateChangeEvent);
+        return evt.state == aState && evt.isExtraState == aIsExtraState &&
+          aIsEnabled == evt.isEnabled && getAccessible(aTarget) == evt.accessible;
+      }];
+    }
+
     async function openNode(aIDDetails, aIDSummary, aIsOpen) {
-      let p = waitForStateChange(aIDSummary, STATE_EXPANDED, aIsOpen, false);
+      let p = waitForEvent(...stateChange(STATE_EXPANDED, false, aIsOpen, aIDSummary));
       if (aIsOpen) {
         getNode(aIDDetails).setAttribute("open", "");
       } else {
@@ -29,25 +37,25 @@
     }
 
     async function makeEditableDoc(aDocNode, aIsEnabled) {
-      let p = waitForStateChange(aDocNode, EXT_STATE_EDITABLE, true, true);
+      let p = waitForEvent(...stateChange(EXT_STATE_EDITABLE, true, true, aDocNode));
       aDocNode.designMode = "on";
       await p;
     }
 
     async function invalidInput(aNodeOrID) {
-      let p = waitForStateChange(aNodeOrID, STATE_INVALID, true, false);
+      let p = waitForEvent(...stateChange(STATE_INVALID, false, true, aNodeOrID));
       getNode(aNodeOrID).value = "I am not an email";
       await p;
     }
 
     async function changeCheckInput(aID, aIsChecked) {
-      let p = waitForStateChange(aID, STATE_CHECKED, aIsChecked, false);
+      let p = waitForEvent(...stateChange(STATE_CHECKED, false, aIsChecked, aID));
       getNode(aID).checked = aIsChecked;
       await p;
     }
 
     async function changeRequiredState(aID, aIsRequired) {
-      let p = waitForStateChange(aID, STATE_REQUIRED, aIsRequired, false);
+      let p = waitForEvent(...stateChange(STATE_REQUIRED, false, aIsRequired, aID));
       getNode(aID).required = aIsRequired;
       await p;
     }
@@ -58,8 +66,8 @@
       let fileControl = getAccessible(fileControlNode);
       let browseButton = fileControl.firstChild;
       let p = waitForEvents([
-        stateChangeEventArgs(fileControl, aState, aIsEnabled, aIsExtraState),
-        stateChangeEventArgs(browseButton, aState, aIsEnabled, aIsExtraState)])
+        stateChange(aState, aIsExtraState, aIsEnabled, fileControl),
+        stateChange(aState, aIsExtraState, aIsEnabled, browseButton)])
       fileControlNode.setAttribute(aAttr, aValue);
       await p;
     }
@@ -75,14 +83,14 @@
 
     async function toggleStateChange(aID, aAttr, aState, aIsExtraState) {
       let p = waitForEvents([
-        stateChangeEventArgs(aID, aState, true, aIsExtraState),
+        stateChange(aState, aIsExtraState, true, aID),
         [EVENT_STATE_CHANGE, "sentinel"]
         ]);
       getNode(aID).setAttribute(aAttr, "true");
       toggleSentinel();
       await p;
       p = waitForEvents([
-        stateChangeEventArgs(aID, aState, false, aIsExtraState),
+        stateChange(aState, aIsExtraState, false, aID),
         [EVENT_STATE_CHANGE, "sentinel"]
         ]);
       getNode(aID).setAttribute(aAttr, "false");
@@ -93,7 +101,7 @@
     async function dupeStateChange(aID, aAttr, aValue,
                              aState, aIsExtraState, aIsEnabled) {
       let p = waitForEvents([
-        stateChangeEventArgs(aID, aState, aIsEnabled, aIsExtraState),
+        stateChange(aState, aIsExtraState, aIsEnabled, aID),
         [EVENT_STATE_CHANGE, "sentinel"]
         ]);
       getNode(aID).setAttribute(aAttr, aValue);
@@ -106,8 +114,8 @@
       let p = waitForEvents({
         expected: [[EVENT_STATE_CHANGE, "sentinel"]],
         unexpected: [
-          stateChangeEventArgs(aID, aState, false, aIsExtraState),
-          stateChangeEventArgs(aID, aState, true, aIsExtraState)
+          stateChange(aState, aIsExtraState, false, aID),
+          stateChange(aState, aIsExtraState, true, aID)
         ]
       });
       getNode(aID).setAttribute(aAttr, "false");
@@ -121,7 +129,7 @@
      */
     async function echoingStateChange(aID, aARIAAttr, aAttr, aValue,
                                       aState, aIsExtraState, aIsEnabled) {
-      let p = waitForStateChange(aID, aState, aIsEnabled, aIsExtraState);
+      let p = waitForEvent(...stateChange(aState, aIsExtraState, aIsEnabled, aID));
       if (aValue == null) {
         getNode(aID).removeAttribute(aARIAAttr);
         getNode(aID).removeAttribute(aAttr);
@@ -133,33 +141,33 @@
     }
 
     async function testLinked() {
-      let p = waitForStateChange("link1", STATE_LINKED, false, false);
+      let p = waitForEvent(...stateChange(STATE_LINKED, false, false, "link1"));
       getNode("link1").removeAttribute("href");
       await p;
 
-      p = waitForStateChange("link2", STATE_LINKED, false, false);
+      p = waitForEvent(...stateChange(STATE_LINKED, false, false, "link2"));
       getNode("link2").removeAttribute("onclick");
       await p;
 
-      p = waitForStateChange("link3", STATE_LINKED, true, false);
+      p = waitForEvent(...stateChange(STATE_LINKED, false, true, "link3"));
       getNode("link3").setAttribute("href", "http://example.com");
       await p;
     }
 
     async function testHasPopup() {
-      let p = waitForStateChange("popupButton", STATE_HASPOPUP, true, false);
+      let p = waitForEvent(...stateChange(STATE_HASPOPUP, false, true, "popupButton"));
       getNode("popupButton").setAttribute("aria-haspopup", "true");
       await p;
 
-      p = waitForStateChange("popupButton", STATE_HASPOPUP, false, false);
+      p = waitForEvent(...stateChange(STATE_HASPOPUP, false, false, "popupButton"));
       getNode("popupButton").setAttribute("aria-haspopup", "false");
       await p;
 
-      p = waitForStateChange("popupButton", STATE_HASPOPUP, true, false);
+      p = waitForEvent(...stateChange(STATE_HASPOPUP, false, true, "popupButton"));
       getNode("popupButton").setAttribute("aria-haspopup", "true");
       await p;
 
-      p = waitForStateChange("popupButton", STATE_HASPOPUP, false, false);
+      p = waitForEvent(...stateChange(STATE_HASPOPUP, false, false, "popupButton"));
       getNode("popupButton").removeAttribute("aria-haspopup");
       await p;
     }
@@ -171,14 +179,14 @@
         "button should have DEFAULT state");
       let button = document.createElement("button");
       button.textContent = "new default";
-      let p = waitForStateChange("default-button", STATE_DEFAULT, false, false);
+      let p = waitForEvent(...stateChange(STATE_DEFAULT, false, false, "default-button"));
       getNode("default-button").before(button);
       await p;
       testStates("default-button",
         0, 0,
         STATE_DEFAULT, 0,
         "button should not have DEFAULT state");
-      p = waitForStateChange("default-button", STATE_DEFAULT, true, false);
+      p = waitForEvent(...stateChange(STATE_DEFAULT, false, true, "default-button"));
       button.remove();
       await p;
       testStates("default-button",
@@ -188,10 +196,10 @@
     }
 
     async function testReadOnly() {
-      let p = waitForStateChange("email", STATE_READONLY, true, false);
+      let p = waitForEvent(...stateChange(STATE_READONLY, false, true, "email"));
       getNode("email").setAttribute("readonly", "true");
       await p;
-      p = waitForStateChange("email", STATE_READONLY, false, false);
+      p = waitForEvent(...stateChange(STATE_READONLY, false, false, "email"));
       getNode("email").removeAttribute("readonly");
       await p;
     }
@@ -202,8 +210,8 @@
         0, EXT_STATE_EDITABLE,
         "article is READONLY and not EDITABLE");
       let p = waitForEvents([
-        stateChangeEventArgs("article", STATE_READONLY, false, false),
-        stateChangeEventArgs("article", EXT_STATE_EDITABLE, true, true)]);
+        stateChange(STATE_READONLY, false, false, "article"),
+        stateChange(EXT_STATE_EDITABLE, true, true, "article")]);
       getNode("article").contentEditable = "true";
       await p;
       testStates("article",
@@ -211,8 +219,8 @@
         STATE_READONLY, 0,
         "article is EDITABLE and not READONLY");
       p = waitForEvents([
-        stateChangeEventArgs("article", STATE_READONLY, true, false),
-        stateChangeEventArgs("article", EXT_STATE_EDITABLE, false, true)]);
+        stateChange(STATE_READONLY, false, true, "article"),
+        stateChange(EXT_STATE_EDITABLE, true, false, "article")]);
       getNode("article").contentEditable = "false";
       await p;
       testStates("article",
@@ -226,14 +234,14 @@
         STATE_ANIMATED, 0,
         0, 0,
         "image should be animated 1");
-      let p = waitForStateChange("animated-image", STATE_ANIMATED, false, false);
+      let p = waitForEvent(...stateChange(STATE_ANIMATED, false, false, "animated-image"));
       getNode("animated-image").src = "../animated-gif-finalframe.gif";
       await p;
       testStates("animated-image",
         0, 0,
         STATE_ANIMATED, 0,
         "image should not be animated 2");
-      p = waitForStateChange("animated-image", STATE_ANIMATED, true, false);
+      p = waitForEvent(...stateChange(STATE_ANIMATED, false, true, "animated-image"));
       getNode("animated-image").src = "../animated-gif.gif";
       await p;
       testStates("animated-image",
@@ -253,7 +261,7 @@
         STATE_INVISIBLE, 0,
         0, 0,
         "image should be invisible");
-      p = waitForStateChange("image", STATE_INVISIBLE, false, false);
+      p = waitForEvent(...stateChange(STATE_INVISIBLE, false, false, "image"));
       await fetch("http://example.com/a11y/accessible/tests/mochitest/events/slow_image.sjs?complete");
       await p;
       testStates("image",
@@ -268,8 +276,8 @@
         STATE_MULTISELECTABLE | STATE_EXTSELECTABLE, 0,
         `${aID} should not be multiselectable`);
       let p = waitForEvents([
-        stateChangeEventArgs(aID, STATE_MULTISELECTABLE, true, false),
-        stateChangeEventArgs(aID, STATE_EXTSELECTABLE, true, false),
+        stateChange(STATE_MULTISELECTABLE, false, true, aID),
+        stateChange(STATE_EXTSELECTABLE, false, true, aID),
       ]);
       getNode(aID).setAttribute(aAttribute, true);
       await p;
@@ -278,8 +286,8 @@
         0, 0,
         `${aID} should not be multiselectable`);
       p = waitForEvents([
-        stateChangeEventArgs(aID, STATE_MULTISELECTABLE, false, false),
-        stateChangeEventArgs(aID, STATE_EXTSELECTABLE, false, false),
+        stateChange(STATE_MULTISELECTABLE, false, false, aID),
+        stateChange(STATE_EXTSELECTABLE, false, false, aID),
       ]);
       getNode(aID).removeAttribute(aAttribute);
       await p;
@@ -315,7 +323,7 @@
         expected: [
           // Setting the form's autocomplete attribute to "off" will cause
           // "input" to lost its autocomplete state.
-          stateChangeEventArgs("input", EXT_STATE_SUPPORTS_AUTOCOMPLETION, false, true)
+          stateChange(EXT_STATE_SUPPORTS_AUTOCOMPLETION, true, false, "input")
         ],
         unexpected: [
           // "input-list" should preserve its autocomplete state regardless of
@@ -335,7 +343,7 @@
 
       // Same when we remove the form's autocomplete attribute.
       p = waitForEvents({
-        expected: [stateChangeEventArgs("input", EXT_STATE_SUPPORTS_AUTOCOMPLETION, true, true)],
+        expected: [stateChange(EXT_STATE_SUPPORTS_AUTOCOMPLETION, true, true, "input")],
         unexpected: [
           [EVENT_STATE_CHANGE, "input-list"],
           [EVENT_STATE_CHANGE, "input-autocomplete-off"],
@@ -350,14 +358,14 @@
       p = waitForEvents({
         expected: [
           // Forcing autocomplete off on an input will cause a state change
-          stateChangeEventArgs("input", EXT_STATE_SUPPORTS_AUTOCOMPLETION, false, true),
+          stateChange(EXT_STATE_SUPPORTS_AUTOCOMPLETION, true, false, "input"),
           // Associating a datalist with an autocomplete=off input
           // will give it an autocomplete state, regardless.
-          stateChangeEventArgs("input-autocomplete-off", EXT_STATE_SUPPORTS_AUTOCOMPLETION, true, true),
+          stateChange(EXT_STATE_SUPPORTS_AUTOCOMPLETION, true, true, "input-autocomplete-off"),
           // XXX: datalist inputs also get a HASPOPUP state, the inconsistent
           // use of that state is inexplicable, but lets make sure we fire state
           // change events for it anyway.
-          stateChangeEventArgs("input-autocomplete-off", STATE_HASPOPUP, true, false),
+          stateChange(STATE_HASPOPUP, false, true, "input-autocomplete-off"),
         ],
         unexpected: [
           // Forcing autocomplete off with a dataset input does nothing.
