--- a/gfx/layers/apz/test/mochitest/test_group_keyboard.html
+++ b/gfx/layers/apz/test/mochitest/test_group_keyboard.html
@@ -12,7 +12,7 @@ var subtests = [
   {"file": "helper_key_scroll.html", prefs: [["apz.test.logging_enabled", true],
                                              ["test.events.async.enabled", true]]},
   {"file": "helper_bug1674935.html", prefs: []},
-  {"file": "helper_relative_scroll_smoothness.html",
+  {"file": "helper_relative_scroll_smoothness.html?input-type=key",
    prefs: [
     ["apz.test.logging_enabled", true],
     // Use a longer animation duration to avoid the situation that the
